testdata/baselines/reference/submodule/conformance/checkJsdocTypedefOnlySourceFile.errors.txt
0.js(10,12): error TS2503: Cannot find namespace 'exports'.


==== 0.js (1 errors) ====
    // @ts-check
    
    var exports = {};
    
    /**
     * @typedef {string}
     */
    exports.SomeName;
    
    /** @type {exports.SomeName} */
               ~~~~~~~
!!! error TS2503: Cannot find namespace 'exports'.
    const myString = 'str';
    